# upbeat

./: .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: record_order_cassettes.py
specs/: exchange.yaml  quotation.yaml  websocket.yaml
src/upbeat/: __init__.py  _auth.py  _base.py  _client.py  _config.py  _constants.py  _convenience.py  _errors.py  _http.py  _logger.py  _pandas.py  _protocols.py
src/upbeat/api/: __init__.py  accounts.py  deposits.py  markets.py  orders.py  quotation.py  travel_rule.py  withdrawals.py
src/upbeat/shortcuts/: __init__.py  _accounts.py  _order_helpers.py  _portfolio.py
src/upbeat/strategies/: __init__.py  _base.py  alerts.py  dca.py  order_helpers.py  portfolio.py  rebalance.py
src/upbeat/types/: __init__.py  account.py  common.py  deposit.py  market.py  order.py  quotation.py  travel_rule.py  withdrawal.py
src/upbeat/ws/: __init__.py  _client.py  _payload.py  types.py
tests/: _serializers.py  _vcr.py  conftest.py  record_order_cassettes.py  test_auth.py  test_client.py  test_config.py  test_constants.py  test_convenience.py  test_errors.py  test_http.py  test_logger.py  test_pandas.py
tests/api/: test_accounts.py  test_accounts_vcr.py  test_deposits.py  test_markets.py  test_orders.py  test_orders_vcr.py  test_quotation.py  test_quotation_vcr.py  test_travel_rule.py  test_withdrawals.py
tests/cassettes/accounts/: list.yaml
tests/cassettes/orders/: create_test.yaml  get_chance.yaml  lifecycle_bulk_cancel_by_ids.yaml  lifecycle_cancel_and_new.yaml  lifecycle_cancel_open.yaml  lifecycle_create_get_cancel.yaml  lifecycle_list_by_ids.yaml  list_closed.yaml  list_open.yaml  market_buy_sell.yaml
tests/cassettes/quotation/: get_candles_days.yaml  get_candles_minutes.yaml  get_candles_months.yaml  get_candles_seconds.yaml  get_candles_weeks.yaml  get_candles_years.yaml  get_orderbook_instruments.yaml  get_orderbooks.yaml  get_tickers.yaml  get_tickers_by_quote.yaml  get_trades.yaml
tests/shortcuts/: test_accounts.py  test_order_helpers.py  test_portfolio.py
tests/strategies/: test_alerts.py  test_dca.py  test_order_helpers.py  test_portfolio.py  test_rebalance.py
tests/ws/: test_websocket.py
