[project]
name = "upbeat"
version = "0.0.0"
description = "Modern Python client for the Upbit cryptocurrency exchange API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "websockets>=16.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
    "vcrpy>=8.1.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
