[project]
name = "upbeat"
version = "0.2.0"
description = "Modern Python client for the Upbit cryptocurrency exchange API"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "GeunYoungLim", email = "interruping@naver.com" },
]
keywords = ["upbit", "cryptocurrency", "exchange", "api", "trading", "bitcoin", "async", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: Pydantic :: 2",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/interruping/upbeat"
Repository = "https://github.com/interruping/upbeat"
Issues = "https://github.com/interruping/upbeat/issues"
Changelog = "https://github.com/interruping/upbeat/releases"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas>=2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
    "vcrpy>=8.1.1",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
venvPath = "."
venv = ".venv"
